Missed these from my last check, sorry TBW

--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -50,7 +50,7 @@ CHL_fighter2_desc:0 "Air superiority could be meaningless if we cannot capitalis
 CHL_fighter3_desc:0 "Our country is, from an strategical standpoint, too long in a North-South axis to be properly protected by common fighter craft. We must ensure, with the help of our comrades in Europe, that our Airforce has planes capable of long autonomous flights"
 CHL_airdoc:0 "Aerial Strategy"
 CHL_airdoc2_desc:0 "The engagements themselves are also to be analysed, and our few planes cannot be foolishly thrown away. Careful studying and manoeuvres will be key in our coming victory"
-CHL_airdoc_desc:0 "Aerial engagements are quick and brutal affairs; and it pays to plan for them and stratgic missions beforehand. What will be the focus of our airforce in the war to come, our General Staff must decide"
+CHL_airdoc_desc:0 "Aerial engagements are quick and brutal affairs; and it pays to plan for them and strategic missions beforehand. What will be the focus of our airforce in the war to come, our General Staff must decide"
 CHL_airdoc2:0 "Aerial Tactics"
 CHL_bomber:0 "Bomber Effort"
 CHL_bomber_desc:0 "The role of a Bomber Craft is somewhat new, but it's uses were made apparent many times. In order to make sure we can defend the Fatherland, our Weltkrieg era models will have to be replaced"
@@ -65,11 +65,11 @@ CHL_dockyard_desc:0 "Our fleet, while well armed and well supplied, has many sec
 CHL_carry2:0 "Aircraft Carrier Effort"
 CHL_carry2_carry:0 "Many experts believe in the importance of Aircraft carriers in a naval engagement; this is  especially true in our Republic, given how a great many influential staff members have an Airforce background. While monumentally expensive, a modern aircraft carrier might mean the difference between victory and defeat"
 CHL_cafi:0 "Naval Strike Aircraft"
-CHL_cafi_desc:0 "Naval Aircraft has always been a key factor of national defence; most of our important military centers are within range of Naval Artillery. It's a matter of the utmost importance, to ensure we can defend our coastline from foreign aggression"
+CHL_cafi_desc:0 "Naval Aircraft has always been a key factor of national defence; most of our important military centres are within range of Naval Artillery. It's a matter of the utmost importance, to ensure we can defend our coastline from foreign aggression"
 CHL_hc:0 "Cruiser Breakthroughs"
 CHL_hc_desc:0 "Cruisers are a mainstay of our navy, but they are all of outdated models and specifications, despite out buildup efforts. Technological improvements are in order"
 CHL_bc:0 "Additional Shipyard Investments"
-CHL_bc_desc:0 "A powerful navy cannot be maintained by relying on foreign shipyards. Our docks will be upgraded to modern standards, with some help from ou Comrades from Europe"
+CHL_bc_desc:0 "A powerful navy cannot be maintained by relying on foreign shipyards. Our docks will be upgraded to modern standards, with some help from our Comrades from Europe"
 CHL_bb:0 "Commission more Battleships"
 CHL_bb_desc:0 "The Almirante Latorre class battleship is a fine vessel, but one that shows it's age, even with the small upgrades we outfitted. We will likely require a new flagship to ensure our national security"
 CHL_highseas2:0 "Blue Water Navy"
@@ -171,11 +171,11 @@ CHL_veteran_negotiators_desc:0 "Many of our men, including Marmaduke Grove himse
 CHL_joint_projects:0 "Joint Projects"
 CHL_joint_projects_desc:0 "Many of our academics will be sent to France and Europe, in order to aid both Chile and the World Revolution at large!"
 CHL_FEC:0 "Fuerza Expedicionaria Chilena"
-CHL_FEC_desc:0 "The Second Weltkreig has begun! Each Chilean must do his or her part in the coming conflict, but we will also send brave comrades to aid France in its struggle!"
+CHL_FEC_desc:0 "The Second Weltkrieg has begun! Each Chilean must do his or her part in the coming conflict, but we will also send brave comrades to aid France in its struggle!"
 CHL_revolution_of_the_south:0 "Southern Revolution"
 CHL_revolution_of_the_south-desc:0 "We must be ever thankful for the assistance of our European Comrades, however, if we are to survive, we must focus on the here and now; La Plata will crush us if they can! Thankfully, the recently freed workers of Brazil might be of use!"
 CHL_ANLPSLpact:0 "ANL-PSC Pact"
-CHL_ANLPSLpact_desc:0 "Despite the bumby ride, the Brazilian ANL finally has a grip on their country, but is under threat from Platine imperialists. Now that we are together in this struggle, we must ensure all resources and efforts are shared for the greater good of mankind"
+CHL_ANLPSLpact_desc:0 "Despite the bumpy ride, the Brazilian ANL finally has a grip on their country, but is under threat from Platine imperialists. Now that we are together in this struggle, we must ensure all resources and efforts are shared for the greater good of mankind"
 CHL_liberation:0 "Continental Liberation Plans"
 CHL_liberation_desc:0 "Are are now in a position to flank and overwhelm La Plata as we see fit. We and our Brazilian Comrades will ensure the continent will be free from Tyranny!" 
 CHL_gsw:0 "Great South American War"
