As I go close for the night I see this

--- a/localisation/KR_Ecuador_l_english.yml
+++ b/localisation/KR_Ecuador_l_english.yml
@@ -92,7 +92,7 @@ ECU_yards_desc:0 "We must ensure we can repair and rebuild our warships, and inv
 ECU_destroya_desc:0 "Our shipping lanes could find themselves under threat from enemy submarines, which could starve our nation of vital resources and good. Anti Submarine ships are to be deployed alongside convoys"
 ECU_subs_desc:0 "We can work around the relative small size of our navy by ensuring our submarines can keep our enemies busy and running in circles; we might need newer models for this however"
 ECU_blockade_desc:0 "We can set up a network of submarine raiders to ensure that any attack against our sovereignty will be paid on the seas with interest"
-ECU_bombem_desc:0 "Our airforce expansion plans will now be shifter towards bomber craft, that can actively have an impact on the ground"
+ECU_bombem_desc:0 "Our airforce expansion plans will now be shifted towards bomber craft, that can actively have an impact on the ground"
 ECU_aero_desc:0 "Aerial war has only become more vital in the past years, and yet there is little we have done for our airforce besides token purchases. We will begin a renewal effort, prioritisation aerial superiority"
 ECU_poltechsloty_desc:0 "With peace finally reaching our nation, our intellectuals and scientists can truly start working for the betterment of the nation"
 ECU_emergencyfactorysiezure_desc:0 "With the danger of war looming, we must ensure that we have legal ways to get our armies well supplied and equipped"
