Ukrainian-Russian foreign policy

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -24,6 +24,8 @@ UKR_New_Army:0 "New Ukrainian Army"
 UKR_Peasant_state:0 "Peasant State"
 UKR_New_Agriculture:0 "Breadbasket of Europe"
 UKR_Splendid_Isolation:0 "Splendid Isolation"
+UKR_Ties_Germany:0 "Ties with Germany"
+UKR_Ties_Russia:0 "Ties with Russia"
 
 ### OOB ###
 RUS_annex_UKR:0 "Ukrainian army incorporated"
@@ -333,6 +335,26 @@ ukraine.69.b:0 "Maintain the embargo, we must protect our peasants!"
 ukraine.70.t:0 "First Results of the Embargo"
 ukraine.70.d:0 "Our decision to impose an embargo on German goods to help our national producers has thankfully led to a stabilisation of our agricultural sector. 60-70% of the state and private farms can now be called self-supporting. As a result we can solve other, more difficult problems in our economy, because we have support in the villages and farms."
 ukraine.70.a:0 "The bread's back in the breadbasket of Europe!."
+ukraine.71.t:0 "Ukraine proposes an alliance!"
+ukraine.71.d:0 "Ukraine has come to us offering a military alliance. While it'd certainly be good to stand with our Slavic brothers, the reaction from Germany would be coarse to say the least. What should we do?"
+ukraine.71.a:0 "Accept the offer!"
+ukraine.71.b:0 "We do not need this"
+ukraine.72.t:0 "Russia accepted our proposal!"
+ukraine.72.d:0 "Russia agreed that we should be in the same alliance, which will secure the Eastern Europe both from the German imperialists and Syndicalist threat. Mitteleuropa couldn't make us hate our brothers from the Great Russia, that's why we decided to form this alliance - and we belive it will be also profitable for us."
+ukraine.72.a:0 "That's what Khmelnitsky wanted 300 years ago!"
+ukraine.73.t:0 "Ukraine has left us"
+ukraine.73.d:0 "Ukraine has left Mitteleuropa and entered an alliance with the Russians. We however can't risk a war over Ukraine regardless of what some officials are calling for."
+ukraine.73.a:0 "Curse them!"
+ukraine.73.b:0 "We shall destroy them!"
+ukraine.73.c:0 "Curse them!"
+ukraine.73.e:0 "We shall destroy them!"
+ukraine.74.t:0 "Ukraine has left us"
+ukraine.74.d:0 "Ukraine has left Mitteleuropa and entered an alliance with the Russians. We however can't risk a war over Ukraine regardless of what some officials are calling for."
+ukraine.74.a:0 "Curse them!"
+ukraine.74.b:0 "We shall destroy them!"
+ukraine.74.c:0 "Curse them!"
+ukraine.74.e:0 "We shall destroy them!"
+
 ### Focuses ###
 
 UKR_Our_Future:0 "Our Future"
@@ -466,7 +488,7 @@ UKR_is_alone_desc:0 "Ukraine is alone...but we still have lots of our citizens, 
 UKR_Mozyr_claim:0 "White Ruthenian border"
 UKR_Mozyr_claim_desc:0 "-"
 UKR_Bessarabia_claim:0 "Blue Danube"
-UKR_Bessarabia_claim_desc:0 "Bessarabia was stolen from the Russian Empire in 1918. Nowadays lots of the Ukrainians and other national minorities live here under oppression of the corrupted regime in Bucharest. But now is the perfect time, when the freedom and self-determination should prevail in Bessarabia - and of course we will help people in this region reach the liberation."
+UKR_Bessarabia_claim_desc:0 "The Russian Empire lost Bessarabia in 1918. Nowadays lots of the Ukrainians and other national minorities live here under oppression of the corrupted regime in Bucharest. But now is the perfect time, when the freedom and self-determination should prevail in Bessarabia - and of course we will help people in this region reach the liberation."
 UKR_Fra_cooperation:0 "Cooperation with France"
 UKR_Fra_cooperation_desc:0 "Commune of France is the torch of the progress and liberty in Europe. Fortunately Nikita Khrushchev understands that the future belongs to this young and free nation. That's why he proposes that both the Ukrainians and the French should improve the economical relations between our countries, which were almost destroyed during the reign of the former Ukrainian king."
 UKR_Fra_alliance:0 "Syndicalist unity"
