forgot to push Wadai

--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -6820,6 +6820,37 @@ VIE_social_conservatist:0 "Vietnam"
 VIE_social_conservatist_ADJ:0 "Vietnamese"
 VIE_social_conservatist_DEF:0 "Vietnam"
 
+WAD_totalist:0 "Toubou Commune"
+WAD_totalist_ADJ:0 "Toubou"
+WAD_totalist_DEF:0 "The Toubou Commune"
+WAD_syndicalist:0 "Toubou Commune"
+WAD_syndicalist_ADJ:0 "Toubou"
+WAD_syndicalist_DEF:0 "The Toubou Commune"
+WAD_radical_socialist:0 "Toubou Commune"
+WAD_radical_socialist_ADJ:0 "Toubou"
+WAD_radical_socialist_DEF:0 "The Toubou Commune"
+WAD_social_democratist:0 "Wadai"
+WAD_social_democratist_ADJ:0 "Wadai"
+WAD_social_democratist_DEF:0 "Wadai"
+WAD_social_liberalist:0 "Wadai"
+WAD_social_liberalist_ADJ:0 "Wadai"
+WAD_social_liberalist_DEF:0 "Wadai"
+WAD_market_liberalist:0 "Wadai"
+WAD_market_liberalist_ADJ:0 "Wadai"
+WAD_market_liberalist_DEF:0 "Wadai"
+WAD_authoritarian_democrat:0 "Wadai"
+WAD_authoritarian_democrat_ADJ:0 "Wadai"
+WAD_authoritarian_democrat_DEF:0 "Wadai"
+WAD_paternal_autocratist:0 "Wadai"
+WAD_paternal_autocratist_ADJ:0 "Wadai"
+WAD_paternal_autocratist_DEF:0 "Wadai"
+WAD_national_populist:0 "Wadai"
+WAD_national_populist_ADJ:0 "Wadai"
+WAD_national_populist_DEF:0 "Wadai"
+WAD_social_conservatist:0 "Wadai"
+WAD_social_conservatist_ADJ:0 "Wadai"
+WAD_social_conservatist_DEF:0 "Wadai"
+
 WAL_totalist:0 "Welsh Union"
 WAL_totalist_ADJ:0 "Welsh"
 WAL_totalist_DEF:0 "The Welsh Union"
