--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -43,7 +43,10 @@ MEX_totalist_party:0 "Totalistas"
 MEX_national_populist_party:0 "Sinarquistas"
 MEX_social_conservative_party:0 "Hacienderos"
 MEX_market_liberal_party:0 "Industrialistas"
-
+MEX_social_liberal_party:0 "PAN"
+MEX_social_liberal_party_long:0 "Partido Acción Nacional"
+MEX_authoritarian_democrat_party:0 "PRUN"
+MEX_authoritarian_democrat_party_long:0 "Partido Revolucionario de Unificación Nacional"
 ### Events ###
 mexico.1.t:0 "Assassination attempt on President Zapata"
 mexico.1.d:0 "Breaking news from Mexico City! This morning, as he was about to attend a meeting with local syndicalists in the Zócalo square, president Emiliano Zapata was stabbed in the head with an ice-pick by an unknown assailant! The suspect fled through the narrow streets of downtown Mexico City, and the local police is still after him. Meanwhile, Zapata was rushed to a nearby hospital, where a battle between life and death ensues..."
