--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2078,34 +2078,34 @@ FLN_national_populist_ADJ:0 "Flemish"
 FLN_national_populist_DEF:0 "Flanders"
 
 FNG_totalist:0 "Commune of Fengtian"
-FNG_totalist_ADJ:0 "Chinese Fengtian"
+FNG_totalist_ADJ:0 "Fengtian"
 FNG_totalist_DEF:0 "The Commune of Fengtian"
 FNG_syndicalist:0 "Commune of Fengtian"
-FNG_syndicalist_ADJ:0 "Chinese Fengtian"
+FNG_syndicalist_ADJ:0 "Fengtian"
 FNG_syndicalist_DEF:0 "The Commune of Fengtian"
 FNG_radical_socialist:0 "Commune of Fengtian"
-FNG_radical_socialist_ADJ:0 "Chinese Fengtian"
+FNG_radical_socialist_ADJ:0 "Fengtian"
 FNG_radical_socialist_DEF:0 "The Commune of Fengtian"
 FNG_social_democrat:0 "Fengtian"
-FNG_social_democrat_ADJ:0 "Chinese Fengtian"
+FNG_social_democrat_ADJ:0 "Fengtian"
 FNG_social_democrat_DEF:0 "Fengtian"
-FNG_social_liberal_ADJ:0 "Chinese Fengtian"
+FNG_social_liberal_ADJ:0 "Fengtian"
 FNG_social_liberal_DEF:0 "Fengtian"
 FNG_social_liberal_DEF:0 "Fengtian"
 FNG_market_liberal:0 "Fengtian"
-FNG_market_liberal_ADJ:0 "Chinese Fengtian"
+FNG_market_liberal_ADJ:0 "Fengtian"
 FNG_market_liberal_DEF:0 "Fengtian"
 FNG_social_conservative:0 "Fengtian"
-FNG_social_conservative_ADJ:0 "Chinese Fengtian"
+FNG_social_conservative_ADJ:0 "Fengtian"
 FNG_social_conservative_DEF:0 "Fengtian"
 FNG_authoritarian_democrat:0 "Fengtian Government"
-FNG_authoritarian_democrat_ADJ:0 "Chinese Fengtian"
+FNG_authoritarian_democrat_ADJ:0 "Fengtian"
 FNG_authoritarian_democrat_DEF:0 "The Fengtian Government"
 FNG_paternal_autocrat:0 "Fengtian Government"
-FNG_paternal_autocrat_ADJ:0 "Chinese Fengtian"
+FNG_paternal_autocrat_ADJ:0 "Fengtian"
 FNG_paternal_autocrat_DEF:0 "The Fengtian Government"
 FNG_national_populist:0 "Fengtian Government"
-FNG_national_populist_ADJ:0 "Chinese Fengtian"
+FNG_national_populist_ADJ:0 "Fengtian"
 FNG_national_populist_DEF:0 "The Fengtian Government"
 
 FRA_totalist:0 "Commune of France"
