Kornilov now conveniently dies at the spring of 1937 and wrangel can get full military dictatorship too

--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -357,12 +357,12 @@ kornilov_focus_tooltip:0 "§RKornilov will continue with a military dictatorship
 unlock_kornilov_focus:0 "Kornilov has seized power"
 RUS_vozhd:0 "Savinkov is the new Vozhd!"
 RUS_vozhd_desc:0 "After the death of our leader Lavr Kornilov, his influential prime minister and revolutionary Savinkov has assumed power in the Republic and declared himself the Vozhd of the Russian nation, surpassing the level of power even the old Tsars had. Boris Savinkov is now the Vozhd, the leader of our nation."
-RUS_SAVI:0 "Savinkov is the head of government and Kornilov isn't capable of assuming his post"
+unlock_savinkov_focus:0 "Savinkov is the head of government and Kornilov isn't capable of assuming his post"
 vozhd_focus_tooltip:0 "§RSavinkov will officially be made the new Vozhd of the Republic.§!\n"
-RUS_MIL_DICT:0 "Keep the Army in Charge"
-RUS_MIL_DICT_desc:0 "After the death of our leader Lavr Kornilov, the army continued its rule over Russia by another mean it's now time to make this rule permanent."
+RUS_MIL_DICT:0 "A Military Dictatorship"
+RUS_MIL_DICT_desc:0 "The army has always been a stabilising force in Russia, even after it was stripped of its powers by the weak liberal republic they remained strong to protect Russia. It's only justice to give them the effective control of Russia now, only the army can put itself above all national disputes."
 MIL_DICT_focus_tooltip:0 "§RRussia shall be a military dictatorship!§!\n"
-unlock_milgov:0 "Savinkov is not the head of government and Kornilov isn't capable of assuming his post"
+unlock_milgov:0 "Wrangel is the head of state §Yor§! Savinkov is not the head of government and Kornilov isn't capable of assuming his post"
 
 RUS_SOVIET:0 "Restore the Proletarian Dictatorship!"
 RUS_SOVIET_desc:0 "With men who are loyal to the workers, not the old elite, in charge, it's time to restore the damages caused by the failed government of Kerensky."
@@ -1180,62 +1180,52 @@ russia.2003.t:0 "The Siberian Crisis derails!"
 russia.2003.d:0 "With Siberia declaring its independence from mother Russia our homeland is under direct threat from the east. The entire nation must mobilise to contain this threat!"
 russia.2003.a:0 "They will pay for their insolence!"
 
-received_equipment_500:0 "You received §G500§! infantry equipment from that country"
-received_equipment_1000:0 "You received §G1000§! infantry equipment from that country"
-received_equipment_1500:0 "You received §G1500§! infantry equipment from that country"
-received_equipment_2000:0 "You received §G2000§! infantry equipment from that country"
-received_equipment_5000:0 "You received §G5000§! infantry equipment from that country"
+received_equipment_500:0 "You received §G500§! infantry equipment from that country\n"
+received_equipment_1000:0 "You received §G1000§! infantry equipment from that country\n"
+received_equipment_1500:0 "You received §G1500§! infantry equipment from that country\n"
+received_equipment_2000:0 "You received §G2000§! infantry equipment from that country\n"
+received_equipment_5000:0 "You received §G5000§! infantry equipment from that country\n"
 
 russia.25.t:0 "Reorganisation of the Internal police"
 russia.25.d:0 "With the rise of internal dissent, the government has to grant itself an internal police able to actively hunt down the protesters."
 russia.25.a:0 "A good idea!"
 
-unlock_okhrana_tooltip:0 "The national focus 'Okhranka' has been unlocked in the focus tree!"
-russia_must_wait_unlock:0 "You're not allowed to do this yet"
+unlock_okhrana_tooltip:0 "The national focus 'Okhranka' has been unlocked in the focus tree!\n"
+russia_must_wait_unlock:0 "You're not allowed to do this yet\n"
 
 russia.26.t:0 "Reforming the Military"
 russia.26.d:0 "Recent military exercises have led to one irrefutable conclusion; the Russian military is a mess! Sweeping reforms are needed if we are to be taken seriously by our neighbours. Each of our top commanders both in the army and the navy has come up with a plan. Their proposals await your consultation."
 russia.26.a:0 "I will have a look"
 
-unlock_military_tooltip:0 "You can now reform the Russian army and navy via the focus tree!"
+unlock_military_tooltip:0 "You can now reform the Russian army and navy via the focus tree!\n"
 
 russia.27.t:0 "The Autocracy"
-russia.27.d:0 "More than a year has passed since our assumption of power and we have bought some measure of stability to the country. However, many believe we need to take greater measures to promote the cause of order. But the question is should we keep our democratic progress or should we should bring the political system back to the certainties of the Tsarist era?"
+russia.27.d:0 "More than a year has passed since our assumption of power and we have bought some measure of stability to the country. However, many believe we need to take greater measures to promote the cause of order. But the question is should we keep our democratic progress or should we should bring the political system back to the certainties of the Tsarist era? We could also make Wrangel the only leader of Russia, as he should be."
 russia.27.a:0 "The decision is yours"
-russia.27.b:0 "No the time is not right!"
-unlock_wrangel_tooltip:0 "You can now choose a path in the political part of the focus tree!"
-
-russia.28.t:0 "The Autocracy"
-russia.28.d:0 "Our regime is now established throughout the country and a new order is coming into being. However, many are wondering just how grand Kornilov's ambitions are and they are comparing his power to the Tsars of the old Russian Empire. A clarification of his status is needed. Will him and the army continue to govern Russia or will a tsar be restored?"
-russia.28.a:0 "The decision is yours"
-unlock_kornilov_tooltip:0 "You can now choose a path in the political part of the focus tree!"
-
-russia.44.t:0 "The Autocracy"
-russia.44.d:0 "Our regime is now established throughout the country and a new order is coming into being. However, Kornilov's greatness has been fading out in comparison to Savinkov, his charismatic prime minister. Savinkov is now effectively controlling the government of Russia and wants to enforce his power even more."
-russia.44.a:0 "The Vozhd is getting ambitious..."
-unlock_vozhd_tooltip:0 "You can now choose a path in the political part of the focus tree!"
+unlock_wrangel_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
+unlock_kornilov_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
 
 russia.29.t:0 "The Autocracy"
 russia.29.d:0 "Grand Duke Dmitri has been president for more than a year now and his time in office has been a great success. The people are once again becoming accustomed to the rule by their social betters and now could be perfect time to restore the Tsarist system. But who should be Tsar, Dmitri or the legitimate Tsar Kirill? Or maybe we should maintain the republic of aristocrats."
 russia.29.a:0 "The decision is yours"
-unlock_dmitri_tooltip:0 "You can now choose a path in the political part of the focus tree!"
+unlock_dmitri_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
 
 russia.30.t:0 "Governing Russia"
 russia.30.d:0 "More than a year has passed since our assumption of power and we have brought some measure of stability to the country. But maybe changes to our political system could bring even more stability, in the form of a constitutional monarchy, or maybe not."
 russia.30.a:0 "The decision is yours"
-unlock_milyukov_tooltip:0 "You can now choose a path in the political part of the focus tree!"
+unlock_milyukov_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
 
 russia.31.t:0 "The Constitution"
 russia.31.d:0 "More than a year has passed since our assumption of power and our regime looks as if it is here to stay. However, many voices are being raised on the issue of constitutional reform. Perhaps the Republic no longer serves our purposes and we should restore a constitutional monarchy, or maybe the answer is in the force of the people: a proletarian dictatorship could serve us well. Or do we even have to change the regime? The republic is already in place for us to use."
 russia.31.a:0 "The decision is yours"
-unlock_iraklij_tooltip:0 "You can now choose a path in the political part of the focus tree!"
+unlock_iraklij_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
 
 russia.32.t:0 "The Constitution"
 russia.32.d:0 "More than a year has passed since our assumption of power and our regime looks as if it is here to stay. However, many voices are being raised on the issue of constitutional reform. Perhaps the Republic no longer serves our purposes and we should restore the proletarian dictatorship as dreamed by Lenin, or maybe the answer is in the memories of our people: a constitutional monarchy could serve us well. Or do we even have to change the regime? The republic is already in place for us to use."
 russia.32.a:0 "The decision is yours"
-unlock_bukharin_tooltip:0 "You can now choose a path in the political part of the focus tree!"
+unlock_bukharin_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
 
 russia.33.t:0 "The Popular Front"
 russia.33.d:0 "It's been some time now since the popular front took place in Russia, already the regime brought some reforms to the old system and improved the life conditions of the workers. Russia is more democratic and free than it has ever been and nobody in Russia can even consider a change of regime. However, some voices are growing, asking for an even more free and democratic Russia in the ideals of the socialist revolution, this possibility, however will anger the more conservative elements of our society. What shall we do?"
 russia.33.a:0 "The decision is yours"
-unlock_popular_front_tooltip:0 "You can now choose a path in the political part of the focus tree!"
+unlock_popular_front_tooltip:0 "You can now choose a path in the political part of the focus tree!\n"
