--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -52,7 +52,7 @@ LOADING_TIP_49:0 "Names and individuals are unimportant when Germany's final fat
 LOADING_TIP_50:0 "Whoever looks at America will see that the ship is powered by stupidity, corruption, or prejudice. \n- Johann Most"
 LOADING_TIP_51:0 "I am an Imperialist because I will not be a Colonial. \n- Stephen Leacock"
 LOADING_TIP_52:0 "Optimism is cowardice. \n- Oswald Spengler"
-LOADING_TIP_53:0 "My reign shall end only by constitutional decree, or a bullet. \n- President Kerensky"
+LOADING_TIP_53:0 "My reign shall end only by constitutional decree, or a bullet. \n- Alexandr Kerensky, 1935"
 LOADING_TIP_54:0 "And that is war in a nutshell: the master class has always declared the wars, and the subject class has always fought the battles. \n- Eugene V. Debs"
 LOADING_TIP_55:0 "The Chinese people have only family and clan solidarity; they do not have national spirit \n- Sun Yat-sen (1924)"
 LOADING_TIP_56:0 "It takes a great deal of Christianity to wipe out uncivilised Eastern instincts, such as falling in love at first sight. \n- Rudyard Kipling (1888)"
