--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -454,7 +454,7 @@ RUS_ARI_POL2:0 "Money for The Motherland"
 RUS_ARI_POL2_desc:0 "With the loyalty of the wealthy, influential aristocracy of Russia secured, it's time we put some pressure on them. By securing taxes on the richest we can use this wealth to raise the living standards for all Russians, establishing a greater national unity."
 RUS_ARI_POL3:0 "Strengthen The Industry"
 RUS_ARI_POL3_desc:0 "With many of our friends and associates securing important seats in the senate, it's easy to find the necessary connections to establish and expand the industry belonging to the oligarchs. In return for the opportunity, the aristocrats will be forever grateful."
-RUS_ARI_POL4:0 "Strengthen the senate"
+RUS_ARI_POL4:0 "Strengthen the Senate"
 RUS_ARI_POL4_desc:0 "By now, the Duma holds very little influence compared to the senate. It's about time we reduce its status to nothing more than something purely ceremonial."
 
 RUS_WRA_ADM1:0 "Perestroika"
