Polish Totalists can no longer undermine Mitteleuropa from within

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1209,7 +1209,7 @@ poland.213.a:0 "Damn!"
 poland.214.t:0 "The Monarchist Militia"
 poland.214.d:0 "Rumours have been spreading of a "Monarchist Militia" being formed in the Polish countryside in opposition to the government. While no real actions have been taken against the government as of yet, the fact that this "Militia" can be neither found nor dealt with is beginning to wear on the people's faith in the state."
 poland.214.a:0 "The Monarchists must be stopped!"
-poland.215.t:0 "20th Anniversary of Poland's Independence"
+poland.215.t:0 "20th Anniversary of Polish Independence"
 poland.215.d:0 "There is celebration around the nation today as citizens of the [POL.GetName] celebrate 20 years of independence. The Kingdom of Poland was officially created with the signing of the Act of November 5th, which forged the new Polish state from the ashes of a failing Russia."
 poland.215.a:0 "Here's to twenty more years!"
 
