USA Ministers taken care of save for the elections

--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -738,11 +738,8 @@ ustates.500.d:0 "MacArthur and Reed have long been at loggerheads for some time.
 ustates.500.a:0 "Damn you MacArthur!"
 
 ustates.60.t:0 "Inauguration of President Reed"
-ustates.60.d:0 "The country's social problems have forced the American people to turn to radical solutions; the two-party system has broken down, and Jack Reed is to be sworn in as the 31st president of the United States. Who will President Reed choose as his vice-President?"
-ustates.60.a:0 "Norman Thomas, to institute new legislation and improve worker's rights"
-ustates.60.b:0 "Max Schachtman, to reform and nationalise the major industrial concerns"
-ustates.60.c:0 "Paul Mattick, to sweep away all vestiges of the capitalist system"
-ustates.60.e:0 "William Z. Foster, to create a disciplined army of labour"
+ustates.60.d:0 "The country's social problems have forced the American people to turn to radical solutions; the two-party system has broken down, and Jack Reed is to be sworn in as the 31st president of the United States with Norman Thomas being sworn in as the Vice President. In a stirring speech in Washington DC, Reed has pledged to defend the interests of the workers and work to help revolutionize society for the good of all Americans.  "
+ustates.60.a:0 "Let the People rejoice!"
 
 ustates.61.t:0 "Nationalise the Resource Industries"
 ustates.61.d:0 "One of his first acts as the new president was to nationalise the major industries. He believed that control over the resources of America would be the best way to combat some of the social injustice of the system."
@@ -1207,7 +1204,7 @@ ustates.176.b:0 "MacArthur will be President but he will leave day-to-day ruling
 ustates.176.c:0 "One nation, one country, one ruler"
 
 ustates.177.t:0 "1940 presidential elections"
-ustates.177.d:0 "The Patriotic Party connected with Mac Arthur and his cabinet has a great chance of winning the Presidential elections. The voters are stunned with pro-government propaganda and police actions against the opposition are working. It seems that the government will win and MacArthur's puppet will be the new President."
+ustates.177.d:0 "The Patriotic Party connected with MacArthur and his cabinet has a great chance of winning the Presidential elections. The voters are stunned with pro-government propaganda and police actions against the opposition are working. It seems that the government will win and MacArthur's puppet will be the new President."
 ustates.177.a:0 "Democrat"
 ustates.177.b:0 "Republican"
 ustates.177.c:0 "Patriotic"
@@ -1423,26 +1420,36 @@ ustates.215.t:0 "Alliance with Great Lakes Federation?"
 ustates.215.d:0 "The government of the Great Lakes Federation has announced recently that they want to join Mitteleuropa. It's not a sudden move because pro-Mitteleuropa policy is popular in many circles including the ruling cabinet and army. Do we want to create the Great Alliance between Great Lakes Federation and the German Empire?"
 ustates.215.a:0 "Accept their offer!"
 ustates.215.b:0 "Refuse their alliance, we don't need anyone!"
-
 ustates.216.t:0 "Alliance with the Great Lakes Federation?"
 ustates.216.d:0 "The Great Lakes Federation want to secure their independence via forming a new alliance with us. How we shall respond?"
 ustates.216.a:0 "Accept their offer!"
 ustates.216.b:0 "Refuse their alliance, we don't need anyone!"
 
-ustates.217.t:0 "The Elections of 1940. Knox vs. Garner"
-ustates.217.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. President Curtis will not seek reelection because of his weak health. Vice president Knox is leading the polls, but the tough Texan Garner is not willing to go down without a fight..."
-ustates.217.a:0 "Frank Knox/Thomas Dewey (Rep.)"
-ustates.217.b:0 "John Nance Garner/Henry Wallace (Dem.)"
-ustates.21700.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. Frank Knox, who became president after the death of president Curtis in office, is leading the polls, but the tough Texan Garner is not willing to go down without a fight..."
+
+
+
+
+
+
+
+
+
+
+
+ustates.217.t:0 "The Elections of 1940. Roosevelt vs. Garner"
+ustates.217.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. President Curtis will not seek reelection because of his weak health. Vice president Roosevelt is leading the polls, but the tough Texan Garner is not willing to go down without a fight..."
+ustates.217.a:0 "Quentin Roosevelt/Fiorello H. La Guardia (Rep.)"
+ustates.217.b:0 "John Nance Garner/Harry Trumen (Dem.)"
+ustates.21700.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. Quentin Roosevelt, who became president after the death of president Curtis in office, is leading the polls, but the tough Texan Garner is not willing to go down without a fight..."
 
 ustates.218.t:0 "The Elections of 1940. Garner vs. Knox"
 ustates.218.d:0 "The Civil War is finally at an end and many Americans see the upcoming elections as a sign the country is finally recovering. President Garner has lead the country through this great ordeal and hopes to win reelection. The Republicans have nominated equally tough Frank Knox to show the nation they too can take a tough stance."
-ustates.218.a:0 "John Nance Garner/Henry Wallace (Dem.)"
+ustates.218.a:0 "John Nance Garner/Harry Trumen(Dem.)"
 ustates.218.b:0 "Frank Knox/Thomas Dewey (Rep.)"
 
 ustates.219.t:0 "The Elections of 1940. MacArthur vs. Garner"
 ustates.219.d:0 "The Civil War is finally at an end and General MacArthur has put down his dictatorial powers in order to restore democracy. The Republicans have asked the General to run for president on their behalf. However, many wonder if MacArthur will be as able a leader in times of peace as he was in times of war."
-ustates.219.a:0 "Douglas MacArthur/Frank Knox (Rep.)"
+ustates.219.a:0 "Douglas MacArthur/Quentin Roosevelt (Rep.)"
 ustates.219.b:0 "John Nance Garner/Henry Wallace (Dem.)"
 
 ustates.220.t:0 "The Elections of 1944. Dewey vs. Hull"
