Last fixes for the night.

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -39024,7 +39024,7 @@
 	 PLC_Wladyslaw_Sikorski_mhc_ade:0 "Wladyslaw Sikorski"
 	 Wladyslaw_Sikorski_dead:0 " is incapable of holding any posts."
 	 Wladyslaw_Sikorski_mhc_fired:0 " is incapable of holding this post."
-	 PLC_Marian_Januszajtis_egota_mhc_npo:0 "Marian Januszajtis ¯egota"
+	 PLC_Marian_Januszajtis_egota_mhc_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_mhc_fired:0 " is incapable of holding this post."
 
@@ -39059,7 +39059,7 @@
 	 PLC_Stasys_Rastikis_carm_pau:0 "Stasys Rastikis"
 	 Stasys_Rastikis_dead:0 " is incapable of holding any posts."
 	 Stasys_Rastikis_carm_fired:0 " is incapable of holding this post."
-	 PLC_Marian_Januszajtis_egota_carm_npo:0 "Marian Januszajtis ¯egota"
+	 PLC_Marian_Januszajtis_egota_carm_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_carm_fired:0 " is incapable of holding this post."
 
@@ -39397,7 +39397,7 @@
 	 POL_Adam_Doboszynski_hog_npo:0 "Adam Doboszyñski"
 	 Adam_Doboszynski_dead:0 " is incapable of holding any posts."
 	 Adam_Doboszynski_hog_fired:0 " is incapable of holding this post."
-	 POL_Marian_Januszajtis_egota_hog_npo:0 "Marian Januszajtis ¯egota"
+	 POL_Marian_Januszajtis_egota_hog_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_hog_fired:0 " is incapable of holding this post."
 	 POL_Tadeusz_Bielecki_hog_npo:0 "Tadeusz Bielecki"
@@ -39728,7 +39728,7 @@
 	 POL_Tadeusz_Rozwadowski_mhc_ade:0 "Tadeusz Rozwadowski"
 	 Tadeusz_Rozwadowski_dead:0 " is incapable of holding any posts."
 	 Tadeusz_Rozwadowski_mhc_fired:0 " is incapable of holding this post."
-	 POL_Wacaw_Stachiewicz_mhc_ade:0 "Wac³aw Stachiewicz"
+	 POL_Wacaw_Stachiewicz_mhc_ade:0 "Wacław Stachiewicz"
 	 Wacaw_Stachiewicz_dead:0 " is incapable of holding any posts."
 	 Wacaw_Stachiewicz_mhc_fired:0 " is incapable of holding this post."
 	 POL_Wladyslaw_Sikorski_mhc_ade:0 "Wladyslaw Sikorski"
@@ -39737,7 +39737,7 @@
 	 POL_Jozef_Haller_von_Hallenburg_mhc_pau:0 "Józef Haller von Hallenburg"
 	 Jozef_Haller_von_Hallenburg_dead:0 " is incapable of holding any posts."
 	 Jozef_Haller_von_Hallenburg_mhc_fired:0 " is incapable of holding this post."
-	 POL_Marian_Januszajtis_egota_mhc_npo:0 "Marian Januszajtis ¯egota"
+	 POL_Marian_Januszajtis_egota_mhc_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_mhc_fired:0 " is incapable of holding this post."
 
@@ -39772,7 +39772,7 @@
 	 POL_Jozef_Haller_von_Hallenburg_carm_pau:0 "Józef Haller von Hallenburg"
 	 Jozef_Haller_von_Hallenburg_dead:0 " is incapable of holding any posts."
 	 Jozef_Haller_von_Hallenburg_carm_fired:0 " is incapable of holding this post."
-	 POL_Marian_Januszajtis_egota_carm_npo:0 "Marian Januszajtis ¯egota"
+	 POL_Marian_Januszajtis_egota_carm_npo:0 "Marian Januszajtis Żegota"
 	 Marian_Januszajtis_egota_dead:0 " is incapable of holding any posts."
 	 Marian_Januszajtis_egota_carm_fired:0 " is incapable of holding this post."
 
